# agents-rust

./: .gitignore  Cargo.toml  ROADMAP.md  e2e.sh  install.sh  list_files.py  mcp-debug.sh  mcp.sh  run-agent.sh  run.sh  setup.sh
.omo/run-continuation/: ses_11c22aee6ffebvtcpZsss8nfKG.json
.opencode/: opencode.jsonc
.opencode/skills/agents-rust/: SKILL.md
config/: llm.yaml
plugins/cowsay-wasm/: Cargo.toml
plugins/cowsay-wasm/src/: lib.rs
src/: config.rs  lib.rs  main.rs  server.rs
src/agent/: mod.rs
src/context/: mod.rs
src/dashboard/: mod.rs  server.rs
src/llm/: client.rs  mod.rs  router.rs  types.rs
src/mcp/: mod.rs  server.rs  types.rs
src/memory/: mod.rs  store.rs
src/orchestrator/: mod.rs  types.rs  worker.rs
src/plugin/: mod.rs  runtime.rs
src/sandbox/: mod.rs
src/security/: path_validator.rs
src/skills/: mod.rs
src/terminal/: process.rs
src/tools/: browser.rs  command.rs  edit.rs  filesystem.rs  fuzzy_search.rs  llm.rs  mcp_client.rs  mod.rs  obscura_browser.rs  research.rs  schemas.rs  web_search.rs
