[package]
name = "agents-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# TLS via rustls (no openssl needed)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Edit: Need async trait support
async-trait = "0.1"

# LLM client streaming
futures-util = "0.3"

# HTML parsing for browser tool
scraper = "0.20"

[[bin]]
name = "agents-rust"
path = "src/main.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"
